feat: create home section

--- a/index.html
+++ b/index.html
@@ -12,5 +12,61 @@
       crossorigin="anonymous"
     />
   </head>
-  <body></body>
+  <body>
+    <!DOCTYPE html>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Kebabs</title>
+        <link rel="stylesheet" href="main.css" />
+      </head>
+      <body>
+        <!-- navbar section -->
+        <div
+          class="navbar navbar-expand-lg navbar-dark bg-dark text-white text-lg"
+        >
+          <a class="navbar-brand text-danger text-lg" href="index.html"
+            >Kebabss</a
+          >
+
+          <div class="collapse navbar-collapse show">
+            <a class="navbar-brand" href="index.html">Anasayfa</a>
+            <a class="navbar-brand" href="products.html">Ürünlerimiz</a>
+            <a class="navbar-brand" href="about.html">Hakkımızda</a>
+          </div>
+        </div>
+
+        <!-- home section -->
+        <div class="jumbotron">
+          <h1>Kebabss'la Türk Mutfağından Farklı Lezzetler</h1>
+          <p>
+            Türk mutfağının vazgeçilmezi kebap çeşitlerimizle 2021 yılından beri
+            sizlerleyiz...
+          </p>
+        </div>
+        <div class="container text-danger text-center">
+          <h1>Galeri</h1>
+          <div class="row">
+            <img
+              class="col-4"
+              src="img/kuzu-sis-kebap.jpeg"
+              alt="shish-kebab"
+            />
+            <img class="col-4" src="img/orman-kebap.jpeg" alt="orman-kebab" />
+            <img class="col-4" src="img/testi-kebap.jpeg" alt="testi-kebab" />
+          </div>
+          <div class="row">
+            <img class="col-4" src="img/urfa-kebap.jpeg" alt="urfa-kebab" />
+            <img class="col-4" src="img/adana-kebap.jpeg" alt="adana-kebab" />
+            <img
+              class="col-4"
+              src="img/iskender-kebap.jpeg"
+              alt="iskender-kebab"
+            />
+          </div>
+        </div>
+      </body>
+    </html>
+  </body>
 </html>
